--- a/src/update/org/cict/layout/adding_changing/adding/adding-table.css
+++ b/src/update/org/cict/layout/adding_changing/adding/adding-table.css
@@ -6,7 +6,6 @@
 }
 
 .simple-table-row:hover .simple-table-cell {
-    -fx-background-color: #4567C4;
-    -fx-text-fill: white;
+    -fx-background-color:#66BB6A;
     -fx-cursor: hand;
 }
