--- a/src/update/org/cict/layout/adding_changing/changing/changing-subjects.fxml
+++ b/src/update/org/cict/layout/adding_changing/changing/changing-subjects.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="anchor_main" prefHeight="511.0" prefWidth="1000.0" style="-fx-background-color: #001E4C;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" fx:id="anchor_main" prefHeight="511.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="107.0" layoutY="34.0" prefHeight="49.0" prefWidth="1000.0" style="-fx-background-color: #4567C4;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="107.0" layoutY="34.0" prefHeight="49.0" prefWidth="1000.0" style="-fx-background-color: #27AE60;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label layoutX="15.0" layoutY="17.0" prefHeight="34.0" prefWidth="366.0" text="CHANGING SUBJECT" textFill="WHITE" AnchorPane.topAnchor="10.0">
                <font>
@@ -66,7 +66,7 @@
                               </VBox>
                            </children>
                         </HBox>
-                        <HBox fx:id="hbox_search" alignment="CENTER" prefHeight="150.0" prefWidth="1000.0" style="-fx-background-color: #fff; -fx-background-radius: 50;" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="100.0">
+                        <HBox fx:id="hbox_search" alignment="CENTER" prefHeight="150.0" prefWidth="1000.0" style="-fx-background-color: #fff;" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="100.0">
                            <children>
                               <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -100,11 +100,7 @@
                   </AnchorPane>
                   <AnchorPane fx:id="anchor_view" prefHeight="452.0" prefWidth="1000.0">
                      <children>
-                        <VBox fx:id="vbox_subjectList" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="metro-table" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="10.0">
-                           <stylesheets>
-                              <URL value="@../adding/adding-table.css" />
-                              <URL value="@../metro-ui-table.css" />
-                           </stylesheets></VBox>
+                        <VBox fx:id="vbox_subjectList" alignment="CENTER" layoutY="-3.0" prefHeight="443.0" prefWidth="950.0" styleClass="metro-table" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="0.0" />
                      </children>
                   </AnchorPane>
                </children>
@@ -112,4 +108,8 @@
          </children>
       </AnchorPane>
    </children>
+   <stylesheets>
+      <URL value="@../metro-ui-table.css" />
+      <URL value="@../adding/adding-table.css" />
+   </stylesheets>
 </AnchorPane>
