--- a/src/update/org/cict/layout/adding_changing/metro-ui-table.css
+++ b/src/update/org/cict/layout/adding_changing/metro-ui-table.css
@@ -30,7 +30,7 @@
 /* The bar over the rails*/
 .scroll-pane .scroll-bar:vertical .thumb,
 .scroll-pane .scroll-bar:horizontal .thumb{
-    -fx-background-color: #FFFFFF;
+    -fx-background-color: #27AE60;
     -fx-background-insets: 2, 0, 0;
     -fx-background-radius: 2em;
 }
@@ -41,21 +41,16 @@
 
 .metro-table{
     -fx-border-width: 1 0 0 0;
-    -fx-border-style: dashed;
-    -fx-border-color: #FFFFFF;
+    /*-fx-border-style: dashed;*/
+    -fx-border-color: #27AE60;
 }
 
 .metro-row{
     -fx-border-width: 0 0 1 0;
-    -fx-border-style: dashed;
     -fx-border-color: #FFFFFF;
 }
 .metro-row:hover{
     -fx-cursor: hand;
-}
-
-.label{
-    -fx-text-fill: white;
 }
 
 
